hotfix: fixed the overlap of elements

--- a/blocks/battle/battle.scss
+++ b/blocks/battle/battle.scss
@@ -62,6 +62,18 @@
     }
   }
 
+  @media screen and (max-width: 700px) {
+    & {
+      background-position: left -50px bottom 0;
+    }
+
+    &__chessboard {
+      width: 320px;
+      height: 80px;
+      background-size: contain;
+    }
+  }
+
   @media screen and (max-width: 540px) {
     & {
       padding: 20px 0;
@@ -94,7 +106,6 @@
       margin: 60px auto 0;
       width: 280px;
       height: 70px;
-      background-size: contain;
     }
   }
 }
